--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/PhillipOBonsu/PhillipOBonsu/blob/main/assignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "13ad028b-72b7-43ed-aa78-96fd4e518040",
       "metadata": {
         "id": "13ad028b-72b7-43ed-aa78-96fd4e518040"
@@ -1617,89 +1627,12 @@
         "id": "cXJc9FC4o822"
       },
       "id": "cXJc9FC4o822"
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "JYYg1rHHo7Jt"
-      },
-      "id": "JYYg1rHHo7Jt"
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git config --global user.name \"PhillipOBonsu\"\n",
-        "!git config --global user.email \"Philbonsu2020@gmail.com\""
-      ],
-      "metadata": {
-        "id": "QitWfe-oqyri"
-      },
-      "id": "QitWfe-oqyri",
-      "execution_count": 155,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git status\n",
-        "!ls -la\n",
-        "!git add assignment.ipynb\n",
-        "!git commit -m \"Bonsu, Phillip — HW1 complete Q1 & Q2\"\n",
-        "!git push origin main"
-      ],
-      "metadata": {
-        "id": "rDx6sCN9sERo",
-        "outputId": "df03b687-2c84-4b3f-c281-f61fb653f3eb",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "rDx6sCN9sERo",
-      "execution_count": 163,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "On branch main\n",
-            "Your branch is ahead of 'origin/main' by 1 commit.\n",
-            "  (use \"git push\" to publish your local commits)\n",
-            "\n",
-            "nothing to commit, working tree clean\n",
-            "total 5764\n",
-            "drwxr-xr-x 4 root root    4096 Sep  1 04:26 .\n",
-            "drwxr-xr-x 5 root root    4096 Sep  1 02:58 ..\n",
-            "-rw-r--r-- 1 root root    4070 Sep  1 01:58 assignment.ipynb\n",
-            "drwxr-xr-x 2 root root    4096 Sep  1 01:58 data\n",
-            "drwxr-xr-x 8 root root    4096 Sep  1 05:13 .git\n",
-            "-rw-r--r-- 1 root root 5510656 Sep  1 04:26 GSAF5.xls\n",
-            "-rw-r--r-- 1 root root     211 Sep  1 01:58 README.md\n",
-            "-rw-r--r-- 1 root root  360450 Sep  1 01:58 tidy_data.pdf\n",
-            "On branch main\n",
-            "Your branch is ahead of 'origin/main' by 1 commit.\n",
-            "  (use \"git push\" to publish your local commits)\n",
-            "\n",
-            "nothing to commit, working tree clean\n",
-            "fatal: could not read Username for 'https://github.com': No such device or address\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "s3-piZPSsLYq"
-      },
-      "id": "s3-piZPSsLYq",
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
