--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/PhillipOBonsu/PhillipOBonsu/blob/main/assignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "13ad028b-72b7-43ed-aa78-96fd4e518040",
       "metadata": {
         "id": "13ad028b-72b7-43ed-aa78-96fd4e518040"
@@ -73,11 +63,11 @@
         "! git clone https://github.com/ds3001f25/wrangling_assignment.git"
       ],
       "metadata": {
-        "id": "pAM6YmKa_mO_",
-        "outputId": "c54bbb2b-efe0-404e-c291-52bfdffc0350",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pAM6YmKa_mO_",
+        "outputId": "c54bbb2b-efe0-404e-c291-52bfdffc0350"
       },
       "id": "pAM6YmKa_mO_",
       "execution_count": 45,
@@ -375,7 +365,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 112
+          "height": 132
         },
         "id": "_NANFjPUfARa",
         "outputId": "266f0b0c-87ef-44f8-9cdc-c33094f8fcd4"
@@ -1673,8 +1663,7 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
