--- a/EDA_Assignment_Bonsu_Phillip_Week_2_Homework.ipynb
+++ b/EDA_Assignment_Bonsu_Phillip_Week_2_Homework.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMUbyQf8NnVqdNCr22gBmik",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMUbyQf8NnVqdNCr22gBmik"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,37 +16,16 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/PhillipOBonsu/PhillipOBonsu/blob/main/EDA_Assignment_Bonsu_Phillip_Week_2_Homework.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "!git clone https://github.com/ds3001f25/eda_assignment.git"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "yUUKnSvnmnjx",
-        "outputId": "01dd38db-01b3-43a1-aa6c-92e4de979b23"
+        "collapsed": true,
+        "id": "yUUKnSvnmnjx"
       },
-      "execution_count": 120,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "fatal: destination path 'eda_assignment' already exists and is not an empty directory.\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
